--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -25,7 +25,7 @@
                 <ion-item menu-close href="#/app/records" ng-show="userSession.isLogged()">
                     Historial
                 </ion-item>
-                <ion-item menu-close href="#/app/tools">
+                <ion-item menu-close href="#/app/tools" ng-show="userSession.isLogged()">
                     Herramientas
                 </ion-item>
             </ion-list>
