--- a/www/templates/searcher.html
+++ b/www/templates/searcher.html
@@ -15,7 +15,7 @@
         <ion-list ng-if="['Customer', 'ObjectTypeTrademark', 'ObjectTypeModel', 'MachineTrademark', 'MachineModel'].indexOf(searcher.type)>=0">
             <ion-item class="item-button-right" ng-repeat="r in searcher.data | filter: { Name: searcher.search }" ng-click="searcher.selectRecord(r)">
                 {{ r.Name}}
-                <a class="button button-positive" ng-show="(r.Selected === true)">
+                <a class="button button-positive" ng-show="r.Selected">
                     <i class="icon ion-checkmark"></i>
                 </a>
             </ion-item>
@@ -23,7 +23,7 @@
         <ion-list ng-if="['ObjectType', 'Battery', 'Charger', 'Machine'].indexOf(searcher.type)>=0">
             <ion-item class="item-button-right" ng-repeat="r in searcher.data | filter: { Description: searcher.search }" ng-click="searcher.selectRecord(r)">
                 {{ r.Description}}
-                <a class="button button-positive" ng-show="(r.Selected === true)">
+                <a class="button button-positive" ng-show="r.Selected">
                     <i class="icon ion-checkmark"></i>
                 </a>
             </ion-item>
@@ -31,7 +31,7 @@
         <ion-list ng-if="['User'].indexOf(searcher.type)>=0">
             <ion-item class="item-button-right" ng-repeat="r in searcher.data | filter: searcher.search" ng-click="searcher.selectRecord(r)">
                 {{ r.Username}} ({{ r.FirstName }} {{ r.LastName }})
-                <a class="button button-positive" ng-show="(r.Selected === true)">
+                <a class="button button-positive" ng-show="r.Selected">
                     <i class="icon ion-checkmark"></i>
                 </a>
             </ion-item>
@@ -39,7 +39,7 @@
         <ion-list ng-if="['BatteryType'].indexOf(searcher.type)>=0">
             <ion-item class="item-button-right" ng-repeat="r in searcher.data | filter: searcher.search" ng-click="searcher.selectRecord(r)">
                 {{ r.Voltage }}V ({{ r.NumberOfCells }} Celdas)
-                <a class="button button-positive" ng-show="(r.Selected === true)">
+                <a class="button button-positive" ng-show="r.Selected">
                     <i class="icon ion-checkmark"></i>
                 </a>
             </ion-item>
