Mejoras en el formulario de mantenimiento

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -4,11 +4,11 @@
             <ion-list>
                 <label class="item item-input" ng-class="{'input-required': loginForm.emailAddressInput.$error.required}">
                     <span class="input-label">Correo electrónico</span>
-                    <input name="emailAddressInput" placeholder="" type="text" ng-model="login.emailAddress" required="required">
+                    <input name="emailAddressInput" placeholder="" type="text" ng-model="login.emailAddress" required>
                 </label>
                 <label class="item item-input" ng-class="{'input-required': loginForm.passwordInput.$error.required}">
                     <span class="input-label">Contraseña</span>
-                    <input name="passwordInput" placeholder="" type="password" ng-model="login.password" required="required">
+                    <input name="passwordInput" placeholder="" type="password" ng-model="login.password" required>
                 </label>
             </ion-list>
             <div style="height: 0;" class="spacer"></div>
