--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -4,11 +4,11 @@
             <ion-list>
                 <label class="item item-input">
                     <span class="input-label">Correo electrónico</span>
-                    <input name="emailAddressInput" type="text" ng-model="login.emailAddress" ng-model-options="modelOptions" required>
+                    <input type="text" ng-model="login.emailAddress" ng-model-options="modelOptions" required>
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Contraseña</span>
-                    <input name="passwordInput" type="password" ng-model="login.password" ng-model-options="modelOptions" required>
+                    <input type="password" ng-model="login.password" ng-model-options="modelOptions" required>
                 </label>
             </ion-list>
             <div style="height: 0;" class="spacer"></div>
